Squash more numbered-code block bugs

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -650,6 +650,11 @@ div[class^='highlight'] pre {
 .highlighttable {
     border-collapse: collapse;
     border-spacing: 0;
+    min-width: 100%;
+}
+
+.linenos {
+    width: 45px;
 }
 
 
